# codex-cluade-code-practice

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  agent-workbench.toml  pyproject.toml
.claude/: settings.json
.claude/hooks/: stop_validate_hint.py
.codex/: hooks.json
.codex/hooks/: stop_validate_hint.py
.githooks/: pre-commit
.github/: pull_request_template.md
.github/codex/prompts/: review.md
.github/workflows/: action-self-test.yml  release.yml  tag-action-smoke.yml  validate.yml
docs/: automation.md  github-action.md
examples/: agent-workbench.toml  audit-output.txt  github-workflow.yml
examples/minimal-agent-repo/: README.md
scripts/: check-package.py  install-git-hooks.sh  validate.sh
src/agent_workbench/: __init__.py  __main__.py  audit.py  baseline.py  changed_lines.py  cli.py  config.py  init_repo.py  models.py  reporting.py  summary.py  templates.py
tests/: test_audit.py  test_baseline.py  test_changed_lines.py  test_cli.py  test_examples.py  test_reporting.py  test_summary.py
